--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -69,7 +69,7 @@ hr.star-primary:after {
 }
 header {
   text-align: center;
-  background-image: url('../img/photo1.png');
+  background-image: url('../img/code.jpg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100%;
